gitconfig: Add `git resign` alias
For resigning commits with GPG key up to a certain hash.

--- a/.gitconfig
+++ b/.gitconfig
@@ -3,6 +3,7 @@
   	path = ~/.gitconfig_local
 [alias]
 	undo = reset --soft HEAD^
+	resign = rebase --exec 'git commit --amend --no-edit -n -S' -i
 [commit]
 	gpgSign = true
 [core]
